--- a/src/Component/Todo.css
+++ b/src/Component/Todo.css
@@ -20,6 +20,8 @@
 .todo-form .todo-heading {
     margin: 30px 0px 10px 0px;
     font-family: monospace;
+    font-size: 26px;
+    border-bottom: 1px solid black;
 }
 
 .todo-form .todo-div {
@@ -112,4 +114,20 @@
 
 .correct-icon {
     font-size: 20px;
+}
+
+.dailytasks {
+    font-family: monospace;
+    margin: 40px auto;
+    border-bottom: 1px solid;
+    width: 15%;
+    font-size: 26px;
+}
+
+.completedtasks {
+    font-family: monospace;
+    margin: 40px auto;
+    border-bottom: 1px solid;
+    width: 20%;
+    font-size: 26px;
 }
