--- a/src/components/Portpolio.css
+++ b/src/components/Portpolio.css
@@ -292,3 +292,81 @@ textarea {
     transition: 0.6s;
     border-radius: 10px;
 }
+
+
+/*-------- media screens ------------------- */
+
+@media screen and (min-width:320px) and (max-width:767px) {
+    .main {
+        padding: 4rem 0rem 2rem 0rem !important;
+    }
+
+    .main3 .cards_row .card {
+        width: 90%;
+    }
+
+    .main3 {
+        padding: 30px 0px 50px 0px;
+    }
+
+    .main3 .my_services {
+        padding: 0px 0px 40px 0px;
+    }
+
+    .main3 .cards_row {
+        gap: 2rem;
+    }
+
+    .main4 {
+        padding: 0px 0px 0px 0px;
+    }
+
+    .main4 .card {
+        margin: 10px 0px;
+    }
+
+    .main4 .card .card_image img {
+        border-radius: 0px;
+        padding: 0px;
+        width: 100%;
+        height: 200px;
+    }
+
+    .main4 .card_image {
+        padding: 15px !important;
+    }
+
+    .contact_form .contact_headings h2 {
+        padding: 0px !important;
+        font-size: 40px !important;
+    }
+
+    .contact_form {
+        width: 100%;
+        padding: 40px 0px 10px 0px;
+    }
+
+    .contact_form .contactform_body {
+        padding: 0px !important;
+    }
+
+    .portfolio .navbar-toggler {
+        background-image: url('https: //e7.pngegg.com/pngimages/774/581/png-clipart-hamburger-button-computer-icons-menu-navigation-menu-angle-rectangle.png');
+        width: 50px;
+        height: 50px;
+        background-color: #ff004f;
+        border: 2px solid #0ef;
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .navbar-nav .nav-link {
+        text-align: center;
+        margin: 3px 0px;
+    }
+
+
+
+}
