--- a/src/components/Portpolio.css
+++ b/src/components/Portpolio.css
@@ -293,16 +293,31 @@ textarea {
     border-radius: 10px;
 }
 
+.main3 .cards_rows {
+    display: flex;
+    flex-direction: row;
+    gap: 13px;
+}
+
 
 /*-------- media screens ------------------- */
 
 @media screen and (min-width:320px) and (max-width:767px) {
+    .portfolio {
+        background-color: darkslategray;
+    }
+
     .main {
-        padding: 4rem 0rem 2rem 0rem !important;
+        padding: 4rem 0rem 0rem 0rem !important;
+    }
+
+    .portfolio .container_nav {
+        width: 100%;
     }
 
     .main3 .cards_row .card {
         width: 90%;
+        text-align: center;
     }
 
     .main3 {
@@ -350,23 +365,39 @@ textarea {
         padding: 0px !important;
     }
 
-    .portfolio .navbar-toggler {
-        background-image: url('https: //e7.pngegg.com/pngimages/774/581/png-clipart-hamburger-button-computer-icons-menu-navigation-menu-angle-rectangle.png');
-        width: 50px;
-        height: 50px;
-        background-color: #ff004f;
-        border: 2px solid #0ef;
-        text-align: center;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
     .navbar-nav .nav-link {
         text-align: center;
         margin: 3px 0px;
     }
 
+    .main2 .aboutimage {
+        display: flex;
+        margin: 0px auto;
+        padding: 0px 0px 30px 0px;
+    }
 
 
+    .main3 .cards_rows .card {
+        margin: 0px auto;
+    }
+
+
+}
+
+@media screen and (min-width:768px) and (max-width:1440px) {
+    .portfolio {
+        background-color: darkslategray;
+    }
+
+    .portfolio .container_nav,
+    .frontpage .container_nav {
+        width: 100%;
+    }
+
+}
+
+@media screen and (min-width:992px) and (max-widtth:1440px) {
+    .navbar-expand-lg .navbar-toggler {
+        display: none !important;
+    }
 }
